
http://onehouronelife.com/updateLog.php



Server Fixes:

--Clearing new emotes list immediately after composing new emotes message,
  instead of much later, so that emotes don't get added later, before clearing,
  and then missed.  Fixes bug where some GH players don't get their permanent
  emote assigned and sent properly.  Fixes #972




Version 399     2023-October-28

--Support for new GH message.

--Support for destroyed GH cause of death.

--Was depending on headIndex=-1 to detect person for headless/bodyless check,
  but getHeadIndex never returns -1.  Check if object is a person instead.




Server Fixes:

--Fixed bug that wasn't actually setting cursed status of players that were
  sent to Donkeytown.  This was causing all kinds of issues (non-Donkeytown
  players could be born to them as mothers, they were being pointed toward as
  experts, etc.)  This was apparently covered up for a long time while birth
  cooldowns were mistakenly set to zero.  Related to #967

--Support for new GH message and sending associated emote.

--Support for GH destroy phrases.





Version 397    2023-October-20

--Fixed ambiguity in English.txt file with two orderCommand values defined.
  Fixes #950

--Gesture maintained when flipping left/right due to mouse movement.
  Part of #953

--Fixed so that gestures from players don't overwrite each other (which was
  causing a player's gestures to switch randomly as other players gesture on
  the same sever).  Fixes #953





Editor Fixes:

--Pickers now show 4 lines of text per item until mouse-over, when text of
  moused item is expanded.  No more overlapping text in pickers, for items
  with long descriptions.

--Description field in Object Editor automatically rewinds to start of field
  when a new object is loaded (it used to auto-position at the end of the text
  description).




Server Fixes:

--Fixed so that if you disconnect and re-join the game, you always rejoin an