@@ -11,6 +11,9 @@ Server Fixes:
   and then missed.  Fixes bug where some GH players don't get their permanent
   emote assigned and sent properly.  Fixes #972
 
+--Fixed a busy-wait 100% cpu server bug caused by ghosts tripping the old age
+  timer and setting our poll timeout (via minMoveTime) to 0.
+
 
 
 
